[package]
name = "imgui-winit-glow-renderer-viewports"
version = "0.13.0"
edition = "2021"
description = "combined platform + renderer using the docking branch viewport feature"
homepage = "https://github.com/imgui-rs/imgui-rs"
repository = "https://github.com/imgui-rs/imgui-rs"
license = "MIT OR Apache-2.0"

[dependencies]
imgui = { version = "0.12.0", features = ["docking"], git = "https://github.com/imgui-rs/imgui-rs" }

glow = "0.14"
glutin = "0.32"
glutin-winit = "0.5"
raw-window-handle = "0.6.0"
winit = "0.30"
thiserror = "1.0.38"